@@ -1,0 +1,20 @@
+########### GENERAL SECTION ################################
+
+BATCH_NAME= timers-rand 
+CLIENTS_NUM_MAX=500
+INTERFACE   =eth0
+NETMASK=16  
+IP_ADDR_MIN= 192.168.1.1
+IP_ADDR_MAX= 192.168.2.255
+CYCLES_NUM= -1
+URLS_NUM= 1
+
+########### URL SECTION ####################################
+
+URL=http://localhost/index.html
+#URL=http://localhost/apache2-default/ACE-INSTALL.html
+#URL=http://localhost/ACE-INSTALL.html
+URL_SHORT_NAME="local-apache"
+REQUEST_TYPE=GET
+TIMER_URL_COMPLETION = 5000
+TIMER_AFTER_URL_SLEEP = 0-2000
